[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-violations-insight-system"
version = "0.1.0"
description = "Data analytics system for traffic violations"
authors = [{name = "Your Name"}]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "streamlit",
    "sqlalchemy"
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 88

[tool.isort]
profile = "black"